--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,11 @@ edition = "2021"
 license = "Apache-2.0"
 links = "ckzg"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = ["src", "inc", "bindings/rust/src", "bindings/rust/build.rs", "blst/bindings/*.h"]
+build = "bindings/rust/build.rs"
+
+[lib]
+path = "bindings/rust/src/lib.rs"
 
 [features]
 default = ["std"]
@@ -18,21 +22,21 @@ serde = ["dep:serde"]
 no-threads = []
 
 [dependencies]
+blst = { version = "0.3.11", default-features = false }
 hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
 libc = { version = "0.2", default-features = false }
 serde = { version = "1.0", optional = true, default-features = false, features = [
-    "alloc",
-    "derive",
+	"alloc",
+	"derive",
 ] }
-blst = { version = "0.3.11", default-features = false }
 
 [dev-dependencies]
 criterion = "0.5.1"
 glob = "0.3.1"
 rand = "0.8.5"
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9.17"
 serde_json = "1.0.105"
+serde_yaml = "0.9.17"
 
 [build-dependencies]
 bindgen = "0.66.1"
@@ -43,4 +47,5 @@ glob = "0.3"
 
 [[bench]]
 name = "kzg_benches"
+path = "bindings/rust/benches/kzg_benches.rs"
 harness = false
